// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitlePanel should match the snapshot 1`] = `
<DocumentFragment>
  .c4 {
  font-weight: 500;
  color: inherit;
  font-size: 1rem;
}

.c4 a {
  color: #4472ca;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:visited {
  color: #9999ca;
}

.c4 a:hover {
  color: #9999ca;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a:active {
  color: #9999ca;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  color: inherit;
  font-size: inherit;
  display: inline;
  line-height: 1.5rem;
}

.c5:disabled {
  background: #aaa;
}

.c6 {
  background: transparent;
  border: none;
  display: inline-block;
  width: auto;
  border-right: none none #A3BAC3;
  border-left: none none #A3BAC3;
  color: #d1b03b;
  font-size: medium;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c6:disabled {
  color: #aaa;
}

.c2 {
  font-weight: 500;
  color: inherit;
  font-size: inherit;
}

.c2 span {
  color: #636363;
  font-weight: 500;
}

.c2 a {
  font-weight: 400;
  color: #636363;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:visited {
  color: #9c9c9c;
}

.c2 a:hover {
  color: #9c9c9c;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:active {
  color: #9c9c9c;
}

.c1 {
  text-transform: uppercase;
  font-weight: 500;
  color: #4472ca;
  font-size: 1.125rem;
}

.c0 {
  margin: 0 0.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      est tempor do anim irure culpa voluptate laboris
    </div>
    <div
      class="c2"
      id="tags"
    >
      Tags: 
      <a
        href="/tag/non eiusmod"
      >
        non eiusmod
      </a>
      <span>
        , 
      </span>
      <a
        href="/tag/cupidatat sit"
      >
        cupidatat sit
      </a>
      <span>
        , 
      </span>
      <a
        href="/tag/ex"
      >
        ex
      </a>
      <span>
        , 
      </span>
      <a
        href="/tag/sint"
      >
        sint
      </a>
      <span>
        , 
      </span>
      <a
        href="/tag/in"
      >
        in
      </a>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        Author: 
        <a
          href="/user/5d5c4546a6bab91d887207c7"
        >
          5d5c4546a6bab91d887207c7
        </a>
      </div>
      <div
        class="c5"
      >
        224
        <button
          class="c6"
          disabled=""
          role="button"
          tabindex="0"
          type="button"
        >
          <i
            class="icon-star-empty"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitlePanel should toggle an icon-star to the an icon-star-empty after click on star button 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: auto;
  border-right: none none #A3BAC3;
  border-left: none none #A3BAC3;
  color: #d1b03b;
  font-size: medium;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-star-empty"
  />
</button>
`;

exports[`TitlePanel should toggle icon an-star-empty to the icon-star after click on star button 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: auto;
  border-right: none none #A3BAC3;
  border-left: none none #A3BAC3;
  color: #d1b03b;
  font-size: medium;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-star"
  />
</button>
`;
